Fix: content overflowing

--- a/css/style.css
+++ b/css/style.css
@@ -403,7 +403,9 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  margin: 0;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -10px;
   padding: 31px 0;
   list-style-type: none;
   font-size: 14px;
@@ -412,9 +414,12 @@ template {
 }
 
 .navbar-menu__link {
+  margin-left: 10px;
+  margin-right: 10px;
   color: inherit;
   text-decoration: none;
   text-transform: uppercase;
+  word-break: break-word;
 }
 
 .logo {
@@ -471,6 +476,7 @@ template {
 .user__avatar {
   width: 40px;
   height: 40px;
+  margin-left: 10px;
   border-radius: 50%;
   -o-object-fit: cover;
      object-fit: cover;
@@ -481,6 +487,7 @@ template {
   font-size: 14px;
   line-height: 18px;
   color: #333333;
+  word-break: break-word;
 }
 
 .breadcrumb-list {
@@ -490,6 +497,8 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   padding: 18px 0;
   list-style-type: none;
@@ -498,11 +507,13 @@ template {
 .breadcrumb-list__item {
   font-size: 10px;
   line-height: 13px;
+  word-break: break-word;
 }
 
 .breadcrumb-list__item:not(:last-child)::after {
   content: "/";
   margin-right: 4px;
+  word-break: break-word;
 }
 
 .breadcrumb-list__link {
@@ -525,12 +536,15 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-bottom: 20px;
 }
 
 .hotel-info__offer {
   margin-left: 14px;
   margin-top: 4px;
+  word-break: break-word;
 }
 
 .hotel-info__name {
@@ -558,11 +572,13 @@ template {
   line-height: 30px;
   font-weight: 700;
   text-transform: uppercase;
+  word-break: break-word;
 }
 
 .hotel-description {
   font-size: 12px;
   line-height: 15px;
+  word-break: break-word;
 }
 
 .hotel-grid {
@@ -572,6 +588,8 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .hotel-inner {
@@ -585,6 +603,8 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .stars {
@@ -605,7 +625,17 @@ template {
 }
 
 .rating {
-  max-width: 65px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 9px 7px 6px;
   min-height: 45px;
   text-align: center;
   color: #FFFFFF;
@@ -617,12 +647,19 @@ template {
   font-weight: 600;
   font-size: 8px;
   line-height: 10px;
+  word-break: break-word;
 }
 
 .rating__counter {
   font-weight: bold;
   font-size: 14px;
   line-height: 18px;
+}
+
+.rating__counter--sm {
+  margin-left: -2px;
+  font-size: 10px;
+  line-height: 13px;
 }
 
 .swiper-container {
@@ -701,7 +738,10 @@ template {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 9px;
+  word-break: break-word;
 }
 
 .booking__price {
@@ -712,28 +752,35 @@ template {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  word-break: break-word;
 }
 
 .booking__start {
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
+  word-break: break-word;
 }
 
 .booking__pricetag {
   font-weight: 800;
   font-size: 24px;
   line-height: 33px;
+  word-break: break-word;
 }
 
 .booking__per-room {
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
+  word-break: break-word;
 }
 
 .booking__room {
   margin-top: 4px;
+  word-break: break-word;
 }
 
 .booking__text {
@@ -746,14 +793,18 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-bottom: 8px;
   font-weight: 400;
   font-size: 12px;
   line-height: 16px;
+  word-break: break-word;
 }
 
 .booking__description {
   margin-left: 9px;
+  word-break: break-word;
 }
 
 .booking__call-center {
@@ -766,6 +817,9 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  word-break: break-word;
   margin-bottom: 17px;
 }
 
@@ -773,6 +827,7 @@ template {
   font-weight: 600;
   font-size: 18px;
   line-height: 25px;
+  word-break: break-word;
 }
 
 .booking__number {
@@ -790,10 +845,12 @@ template {
   line-height: 25px;
   color: inherit;
   text-decoration: none;
+  word-break: break-word;
 }
 
 .booking__phone {
   margin-left: 8px;
+  word-break: break-word;
 }
 
 .booking__button {
@@ -808,6 +865,7 @@ template {
   color: inherit;
   background-color: #EC1F46;
   cursor: pointer;
+  word-break: break-word;
 }
 
 .map {
@@ -850,6 +908,8 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   max-width: 731px;
   margin: auto;
 }
@@ -862,11 +922,14 @@ template {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin: 0;
   color: #FFFFFF;
   font-weight: 300;
   font-size: 24px;
   line-height: 30px;
+  word-break: break-word;
 }
 
 .newsletter-title__strong {
@@ -874,6 +937,7 @@ template {
   font-weight: 600;
   font-size: 36px;
   line-height: 45px;
+  word-break: break-word;
 }
 
 .subscribe {
@@ -928,6 +992,7 @@ template {
   font-size: 12px;
   line-height: 15px;
   color: #FFFFFF;
+  word-break: break-word;
 }
 
 @media (max-width: 1200px) {
