--- a/sass/blocks/_breadcrumb.sass
+++ b/sass/blocks/_breadcrumb.sass
@@ -2,16 +2,19 @@
   &-list
     display: flex
     align-items: center
+    flex-wrap: wrap
     margin: 0
     padding: 18px 0
     list-style-type: none
     &__item
       font-size: 10px
       line-height: 13px
+      word-break: break-word
       &:not(:last-child)
         &::after
           content: "/"
           margin-right: 4px
+          word-break: break-word
     &__link
       text-decoration: none
       color: inherit
