--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -17,16 +17,20 @@
     display: flex
     align-items: center
     justify-content: space-between
-    margin: 0
+    flex-wrap: wrap
+    margin: 0 -10px
     padding: 31px 0
     list-style-type: none
     font-size: 14px
     line-height: 18px
     color: $light
     &__link
+      margin-left: 10px
+      margin-right: 10px
       color: inherit
       text-decoration: none
       text-transform: uppercase
+      word-break: break-word
 
 .logo
   width: 177px
@@ -66,6 +70,7 @@
   &__avatar
     width: 40px
     height: 40px
+    margin-left: 10px
     border-radius: 50%
     object-fit: cover
   &__name
@@ -73,3 +78,4 @@
     font-size: 14px
     line-height: 18px
     color: $text-color
+    word-break: break-word
