--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -5,10 +5,12 @@
     display: flex
     align-items: center
     justify-content: space-between
+    flex-wrap: wrap
     padding-bottom: 20px
     &__offer
       margin-left: 14px
       margin-top: 4px
+      word-break: break-word
     &__name
       margin-top: 4px
       margin-bottom: 0
@@ -23,16 +25,20 @@
     line-height: 30px
     font-weight: 700
     text-transform: uppercase
+    word-break: break-word
   &-description
     font-size: 12px
     line-height: 15px
+    word-break: break-word
   &-grid
     display: flex
     justify-content: space-between
+    flex-wrap: wrap
   &-inner
     display: flex
     flex-direction: column
     justify-content: space-between
+    flex-wrap: wrap
 
 .stars
   flex-basis: 100%
@@ -49,7 +55,10 @@
   border-radius: 3px
 
 .rating
-  max-width: 65px
+  display: flex
+  flex-direction: column
+  align-items: center
+  padding: 9px 7px 6px
   min-height: 45px
   text-align: center
   color: $light
@@ -59,10 +68,15 @@
     font-weight: 600
     font-size: 8px
     line-height: 10px
+    word-break: break-word
   &__counter
     font-weight: bold
     font-size: 14px
     line-height: 18px
+    &--sm
+      margin-left: -2px
+      font-size: 10px
+      line-height: 13px
 
 .swiper-container
   position: relative
@@ -122,43 +136,57 @@
   &__info
     display: flex
     justify-content: space-between
+    flex-wrap: wrap
     margin-bottom: 9px
+    word-break: break-word
   &__price
     display: flex
     flex-direction: column
+    flex-wrap: wrap
+    word-break: break-word
   &__start
     font-weight: 400
     font-size: 10px
     line-height: 14px
+    word-break: break-word
   &__pricetag
     font-weight: 800
     font-size: 24px
     line-height: 33px
+    word-break: break-word
   &__per-room
     font-weight: 400
     font-size: 12px
     line-height: 16px
+    word-break: break-word
   &__room
     margin-top: 4px
+    word-break: break-word
   &__text
     display: flex
     justify-content: space-between
     align-items: center
+    flex-wrap: wrap
     margin-bottom: 8px
     font-weight: 400
     font-size: 12px
     line-height: 16px
+    word-break: break-word
   &__description
     margin-left: 9px
+    word-break: break-word
   &__call-center
     display: flex
     justify-content: space-between
     align-items: center
+    flex-wrap: wrap
+    word-break: break-word
     margin-bottom: 17px
   &__heading
     font-weight: 600
     font-size: 18px
     line-height: 25px
+    word-break: break-word
   &__number
     display: flex
     justify-content: space-between
@@ -168,8 +196,10 @@
     line-height: 25px
     color: inherit
     text-decoration: none
+    word-break: break-word
   &__phone
     margin-left: 8px
+    word-break: break-word
   &__button
     width: 100%
     min-height: 45px
@@ -182,6 +212,7 @@
     color: inherit
     background-color: $primary
     cursor: pointer
+    word-break: break-word
 
 .map
   width: 350px
